# ffi

./: .gitignore  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
.cargo/: config.toml
algo/: Cargo.toml
algo/src/: algo.rs  lib.rs  matrix.rs  vector.rs
node-binding/: Cargo.toml  index.d.ts  index.js  simple-test.js  test.txt
node-binding/__test__/: index.spec.ts
node-binding/src/: algo.rs  lib.rs
python-binding/: Cargo.toml  pyproject.toml
python-binding/src/: lib.rs
python-binding/src/algo/: __init__.py
