[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = {version = "2", features = ["full"], no-default-features = true}
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
